--- a/Practice.css
+++ b/Practice.css
@@ -31,7 +31,7 @@ div {
 	margin-bottom: 10px;
 }
 
-.left {
+/*.left {
 	height: 300px;
 	width: 150px;
 	background-color: #A7DBD8;
@@ -45,7 +45,7 @@ div {
 	background-color: #E0E4CC;
 	float: right;
 	margin-bottom: 10px;
-}
+}*/
 
 #footer {
 	height: 50px;
